--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
-  "homepage": "/",
+  "homepage": "/AlgorithmsApp/templates/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
